--- a/res/layout/app_widget_small.xml
+++ b/res/layout/app_widget_small.xml
@@ -22,20 +22,11 @@
     android:columnCount="2"
     android:rowCount="3"
     android:background="@drawable/appwidget_bg"
+    android:backgroundTintMode="src_atop"
     android:gravity="top"
     android:padding="@dimen/app_widget_padding"
+    android:id="@+id/app_widget_small"
     tools:ignore="NestedWeights" >
-
-    <ImageView
-        android:id="@+id/app_widget_small_backgroundimage"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:columnCount="2"
-        android:rowCount="3"
-        android:src="@drawable/appwidget_bg"
-        android:gravity="top"
-        android:padding="@dimen/app_widget_padding"
-        android:scaleType="fitXY" />
 
     <ImageView
         android:id="@+id/app_widget_small_image"
