--- a/res/layout/app_widget_large.xml
+++ b/res/layout/app_widget_large.xml
@@ -22,6 +22,7 @@
     android:columnCount="2"
     android:rowCount="3"
     android:background="@drawable/appwidget_bg"
+    android:backgroundTint="#BFFFC0CB"
     android:backgroundTintMode="src_over"
     android:id="@+id/app_widget_large"
     tools:ignore="ContentDescription" >
