--- a/res/layout/app_widget_small.xml
+++ b/res/layout/app_widget_small.xml
@@ -22,6 +22,7 @@
     android:columnCount="2"
     android:rowCount="3"
     android:background="@drawable/appwidget_bg"
+    android:backgroundTint="#BFFFC0CB"
     android:backgroundTintMode="src_atop"
     android:gravity="top"
     android:padding="@dimen/app_widget_padding"
